# signal-backup-decrypt

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml
scripts/: gen_proto.py
signal_backup_decrypt/: __init__.py  cli.py  envelope.py  frames.py  html.py  json.py  json_export.py  keys.py  local.py  media.py  model.py
signal_backup_decrypt/proto/: backup_pb2.py  backup_pb2.pyi
signal_backup_decrypt/templates/: index.html
tests/: test_envelope.py  test_export.py  test_html.py  test_keys.py  test_local.py  test_media.py
