[project]
name = "signal-backup-decrypt"
version = "1.0.0"
description = "Decrypt and export Signal Android backups to HTML and JSON"
readme = "README.md"
license = "MIT"
authors = [
    {name = "slurdge"},
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=41",
    "protobuf>=4",
    "jinja2>=3",
    "markupsafe>=2",
    "rich>=15.0.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/slurdge/signal-backup-decrypt"
Repository = "https://github.com/slurdge/signal-backup-decrypt"

[project.scripts]
signal-backup-decrypt = "signal_backup_decrypt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["signal_backup_decrypt"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.81.1",
    "pytest>=9.1.1",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
exclude = [
    "vendor",
    "signal_backup_decrypt/proto",
]
